--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -16,3 +16,11 @@ jobs:
                   import platform
                   print(platform.processor())
               shell: python
+    run-windows-commands:
+        runs-on: windows-latest
+        steps:
+            - name: dir on powershell
+              run: Get-Location
+            - name: dir on bash
+              run: pwd
+              shell: bash
