add dependency between jobs

--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -18,6 +18,8 @@ jobs:
               shell: python
     run-windows-commands:
         runs-on: windows-latest
+        needs:
+            - run-shell-command
         steps:
             - name: dir on powershell
               run: Get-Location
