--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -9,6 +9,7 @@ jobs:
         steps:
             - name: Simple JS Action
               id: greet
+              # instead of v1 you can also use a branch name or a commit id to reference a specific version of an action
               uses: actions/hello-world-javascript-action@v1
               with:
                   who-to-greet: Marco
